--- a/src/vboa/templates/eboa_nav/dim_signatures_nav.html
+++ b/src/vboa/templates/eboa_nav/dim_signatures_nav.html
@@ -12,7 +12,7 @@
   </div>
   <!-- /.panel-heading -->
   <div class="panel-body">
-    <table width="100%" class="table table-striped table-bordered table-hover table-search" id="dim_signatures_table">
+    <table width="100%" class="table table-striped table-bordered table-hover table-search" id="dim-signatures-table">
       <thead>
         <tr>
           <th>DIM signature</th>
