--- a/src/vboa/templates/eboa_nav/query_dim_signatures_content.html
+++ b/src/vboa/templates/eboa_nav/query_dim_signatures_content.html
@@ -6,19 +6,19 @@
           <form role="form" method=post action="/eboa_nav/query-dim-signatures">
             <div class="row">
               <div class="col-xs-3 query-dim-signatures">
-                <label id="dim_signatures_dim_signature_like_checkbox">DIM signature like (<input type="checkbox" name="dim_signature_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="dim_signature_like_dims" name="dim_signature_like" id="dim_signatures_dim_signature_like_text"/>
-                <datalist id="dim_signature_like_dims">
+                <label id="dim-signatures-dim-signature-like-checkbox">DIM signature like (<input type="checkbox" name="dim_signature_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
+                <input class="form-control" list="dim_signature_like_dims" name="dim_signature_like" id="dim-signatures-dim-signature-like-text"/>
+                <datalist id="dim-signature-like-dims">
                 </datalist>
               </div>
               <div class="col-xs-3 query-dim-signatures">
-                <label id="dim_signatures_dim_signature_in_checkbox">DIM signatures (<input type="checkbox" name="dim_signature_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                <select name="dim_signatures" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="dim_signatures_dim_signature_in_text">
+                <label id="dim-signatures-dim-signature-in-checkbox">DIM signatures (<input type="checkbox" name="dim_signature_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+                <select name="dim_signatures" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="dim-signatures-dim-signature-in-text">
                 </select>
               </div>
             </div>
             <div>
-              <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="dim_signatures_submit_button">Query</button>
+              <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="dim-signatures-submit-button">Query</button>
             </div>
           </form>
         </div>
