--- a/src/vboa/templates/eboa_nav/query_gauges_content.html
+++ b/src/vboa/templates/eboa_nav/query_gauges_content.html
@@ -7,51 +7,51 @@
             <div>
               <div class="row  query-gauges">
                 <div class="col-xs-3 query-gauge-names">
-                  <label id="gauges_gauge_names_like_checkbox">Gauge name like (<input type="checkbox" name="gauge_name_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                  <input class="form-control" list="gauge_name_like_gauges" name="gauge_name_like" id="gauges_gauge_names_like_text"/>
-                  <datalist id="gauge_name_like_gauges">
+                  <label id="gauges-gauge-names-like-checkbox">Gauge name like (<input type="checkbox" name="gauge_name_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
+                  <input class="form-control" list="gauge_name_like_gauges" name="gauge_name_like" id="gauges-gauge-names-like-text"/>
+                  <datalist id="gauge-name-like-gauges">
                   </datalist>
                 </div>
                 <div class="col-xs-3 query-gauge-systems">
-                  <label id="gauges_gauge_system_like_checkbox">Gauge system like (<input type="checkbox" name="gauge_system_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                  <input class="form-control" list="gauge_system_like_gauges" name="gauge_system_like" id="gauges_gauge_system_like_text"/>
-                  <datalist id="gauge_system_like_gauges">
+                  <label id="gauges-gauge-system-like-checkbox">Gauge system like (<input type="checkbox" name="gauge_system_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
+                  <input class="form-control" list="gauge_system_like_gauges" name="gauge_system_like" id="gauges-gauge-system-like-text"/>
+                  <datalist id="gauge-system-like-gauges">
                   </datalist>
                 </div>
               </div>
               <div class="row query-gauges">
                 <div class="col-xs-3 query-gauge-names">
-                  <label id="gauges_gauge_names_in_checkbox">Gauge names (<input type="checkbox" name="gauge_name_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                  <select name="gauge_names" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="gauges_gauge_names_in_text">
+                  <label id="gauges-gauge-names-in-checkbox">Gauge names (<input type="checkbox" name="gauge_name_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+                  <select name="gauge_names" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="gauges-gauge-names-in-text">
                   </select>
                 </div>
                 <div class="col-xs-3 query-gauge-systems">
-                  <label id="gauges_gauge_system_in_checkbox">Gauge systems (<input type="checkbox" name="gauge_system_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                  <select name="gauge_systems" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="gauges_gauge_system_in_text">
+                  <label id="gauges-gauge-system-in-checkbox">Gauge systems (<input type="checkbox" name="gauge_system_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+                  <select name="gauge_systems" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="gauges-gauge-system-in-text">
                   </select>
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="col-xs-3 query-dim-signatures">
-                <label id="gauges_dim_signatures_like_checkbox">DIM signature like (<input type="checkbox" name="dim_signature_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="dim_signature_like_sources" name="dim_signature_like" id="gauges_dim_signatures_like_text"/>
-                <datalist id="dim_signature_like_sources">
+                <label id="gauges-dim-signatures-like-checkbox">DIM signature like (<input type="checkbox" name="dim_signature_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
+                <input class="form-control" list="dim_signature_like_sources" name="dim_signature_like" id="gauges-dim-signatures-like-text"/>
+                <datalist id="dim-signature-like-sources">
                 </datalist>
               </div>
               <div class="col-xs-3 query-dim-signatures">
-                <label id="gauges_dim_signatures_in_checkbox">DIM signatures (<input type="checkbox" name="dim_signature_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                <select name="dim_signatures" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1"  id="gauges_dim_signatures_in_text">
+                <label id="gauges-dim-signatures-in-checkbox">DIM signatures (<input type="checkbox" name="dim_signature_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+                <select name="dim_signatures" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1"  id="gauges-dim-signatures-in-text">
                 </select>
               </div>
             </div>
             <div>
-              <label id="gauges_network_button">
+              <label id="gauges-network-button">
                 <input type="checkbox" name="show_network" ><span class="label-text"><b>Show network of gauges</b></span>
               </label>
             </div>
             <div>
-              <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="gauges_submit_button">Query</button>
+              <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="gauges-submit-button">Query</button>
             </div>
           </form>
         </div>
