--- a/src/vboa/templates/eboa_nav/annotation_cnfs_nav.html
+++ b/src/vboa/templates/eboa_nav/annotation_cnfs_nav.html
@@ -12,7 +12,7 @@
   </div>
   <!-- /.panel-heading -->
   <div class="panel-body">
-    <table width="100%" class="table table-striped table-bordered table-hover table-search" id="annotation_cnfs_table">
+    <table width="100%" class="table table-striped table-bordered table-hover table-search" id="annotation-cnfs-table">
       <thead>
         <tr>
           <th>Name</th>
