--- a/src/vboa/templates/eboa_nav/query_sources_content.html
+++ b/src/vboa/templates/eboa_nav/query_sources_content.html
@@ -6,47 +6,47 @@
           <form role="form" method=post action="/eboa_nav/query-sources">
             <div class="row query-sources">
               <div class="col-xs-3 query-source-names">
-                <label>Name like (<input type="checkbox" name="source_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="source_like_sources" name="source_like"/>
-                <datalist id="source_like_sources">
+                <label id="sources-source-names-like-checkbox">Name like (<input type="checkbox" name="source_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
+                <input class="form-control" list="source_like_sources" name="source_like" id="sources-source-names-like-text"/>
+                <datalist id="source-like-sources">
                 </datalist>
               </div>
               <div class="col-xs-3 query-source-names">
-                <label>Names (<input type="checkbox" name="source_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                <select name="sources" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                <label id="sources-source-names-in-checkbox">Names (<input type="checkbox" name="source_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+                <select name="sources" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="sources-source-names-in-text">
                 </select>
               </div>
             </div>
             <div class="row query-sources">
               <div class="col-xs-3 query-source-processors">
-                <label>Processor like (<input type="checkbox" name="processor_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="processor_like_sources" name="processor_like"/>
-                <datalist id="processor_like_sources">
+                <label id="sources-processors-like-checkbox">Processor like (<input type="checkbox" name="processor_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
+                <input class="form-control" list="processor_like_sources" name="processor_like" id="sources-processors-like-text"/>
+                <datalist id="processor-like-sources">
                 </datalist>
               </div>
               <div class="col-xs-3 query-source-processors">
-                <label>Processors (<input type="checkbox" name="processor_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                <select name="processors" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                <label id="sources-processors-in-checkbox">Processors (<input type="checkbox" name="processor_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+                <select name="processors" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="sources-processors-in-text">
                 </select>
               </div>
             </div>
             <div class="row">
               <div class="col-xs-3 query-dim-signatures">
-                <label>DIM signature like (<input type="checkbox" name="dim_signature_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="dim_signature_like_sources" name="dim_signature_like"/>
-                <datalist id="dim_signature_like_sources">
+                <label id="sources-dim-signatures-like-checkbox">DIM signature like (<input type="checkbox" name="dim_signature_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
+                <input class="form-control" list="dim_signature_like_sources" name="dim_signature_like" id="sources-dim-signatures-like-text"/>
+                <datalist id="dim-signature-like-sources">
                 </datalist>
               </div>
               <div class="col-xs-3 query-dim-signatures">
-                <label>DIM signatures (<input type="checkbox" name="dim_signature_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                <select name="dim_signatures" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                <label id="sources-dim-signatures-in-checkbox">DIM signatures (<input type="checkbox" name="dim_signature_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+                <select name="dim_signatures" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="sources-dim-signatures-in-text">
                 </select>
               </div>
             </div>
-            <div class="row">
+            <div class="row" id="sources-validity-start-validity-stop-initial">
               {% include "eboa_nav/validity_start_validity_stop.html" %}
               <div>
-                <span onclick="vboa.add_validity_start_validity_stop('more-validity-start-validity-stop-query-sources')">
+                <span onclick="vboa.add_validity_start_validity_stop('more-validity-start-validity-stop-query-sources')" id="sources-add-validity-start-validity-stop">
                   <span class="glyphicon glyphicon-plus"></span>
                 </span>
               </div>
@@ -54,10 +54,10 @@
             <div id="more-validity-start-validity-stop-query-sources">
             </div>
             <!-- Validity duration -->
-            <div class="row">
+            <div class="row" id="sources-validity-duration-initial">
               {% include "eboa_nav/source_validity_duration.html" %}
               <div>
-                <span onclick="vboa.add_source_validity_duration('more-source-validity-duration-query-sources')">
+                <span onclick="vboa.add_source_validity_duration('more-source-validity-duration-query-sources')" id="sources-add-validity-duration">
                   <span class="glyphicon glyphicon-plus"></span>
                 </span>
               </div>
@@ -65,68 +65,68 @@
             <div id="more-source-validity-duration-query-sources">
             </div>
             <!-- Ingestion time -->
-            <div class="row">
+            <div class="row" id="sources-ingestion-time-initial">
               {% include "eboa_nav/ingestion_time.html" %}
               <div>
-                <span onclick="vboa.add_ingestion_time('more-ingestion-time-query-sources')">
+                <span onclick="vboa.add_ingestion_time('more-ingestion-time-query-sources')" id="sources-add-ingestion-time">
                   <span class="glyphicon glyphicon-plus"></span>
                 </span>
               </div>
             </div>
-            <div class="row">
+            <div class="row" id="sources-ingestion-duration-initial">
               {% include "eboa_nav/ingestion_duration.html" %}
               <div>
-                <span onclick="vboa.add_ingestion_duration('more-ingestion-duration-query-sources')">
+                <span onclick="vboa.add_ingestion_duration('more-ingestion-duration-query-sources')" id="sources-add-ingestion-duration">
                   <span class="glyphicon glyphicon-plus"></span>
                 </span>
               </div>
             </div>
             <div id="more-ingestion-duration-query-sources">
             </div>
-            <div class="row">
+            <div class="row" id="sources-generation-time-initial">
               {% include "eboa_nav/generation_time.html" %}
               <div>
-                <span onclick="vboa.add_generation_time('more-generation-time-query-sources')">
+                <span onclick="vboa.add_generation_time('more-generation-time-query-sources')" id="sources-add-generation-time">
                   <span class="glyphicon glyphicon-plus"></span>
                 </span>
               </div>
             </div>
             <div id="more-generation-time-query-sources">
             </div>
-            <div class="row">
+            <div class="row" id="sources-statuses-initial">
               <div class="col-xs-3 query-source-statuses">
-                <label>Statuses (<input type="checkbox" name="status_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                <select name="source_statuses" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                <label id="sources-statuses-initial-checkbox">Statuses (<input type="checkbox" name="status_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+                <select name="source_statuses" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="sources-statuses-initial-in-text">
                 </select>
               </div>
             </div>
             <div>
-              <label>
+              <label id="sources-show-validity-timeline">
                 <input type="checkbox" id="show-timeline" name="show_validity_timeline" checked><span class="label-text"><b>Show validity timeline</b></span>
               </label>
             </div>
             <div>
-              <label>
+              <label id="sources-show-generation-to-ingestion-timeline">
                 <input type="checkbox" id="show-timeline" name="show_generation_to_ingestion_timeline" checked><span class="label-text"><b>Show generation to ingestion timeline</b></span>
               </label>
             </div>
             <div>
-              <label>
+              <label id="sources-show-number-events-xy">
                 <input type="checkbox" id="show-number-events-xy" name="show_number_events_xy" checked><span class="label-text"><b>Show number of events over time per source</b></span>
               </label>
             </div>
             <div>
-              <label>
+              <label id="sources-show-ingestion-duration-xy">
                 <input type="checkbox" id="show-ingestion-duration-xy" name="show_ingestion_duration_xy" checked><span class="label-text"><b>Show ingestion duration over time per source</b></span>
               </label>
             </div>
             <div>
-              <label>
+              <label id="sources-show-generation-time-to-ingestion-time-xy">
                 <input type="checkbox" id="show-generation-time-to-ingestion-time-xy" name="show_generation_time_to_ingestion_time_xy" checked><span class="label-text"><b>Show generation to ingestion times over time per source</b></span>
               </label>
             </div>
             <div>
-              <button type="submit" class="btn btn-primary" style="margin-top: 12px">Query</button>
+              <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="sources-submit-button">Query</button>
             </div>
           </form>
         </div>
