--- a/src/vboa/templates/eboa_nav/sources_nav.html
+++ b/src/vboa/templates/eboa_nav/sources_nav.html
@@ -13,7 +13,7 @@
   </div>
   <!-- /.panel-heading -->
   <div class="panel-body">
-    <table width="100%" class="table table-striped table-bordered table-hover table-search" id="sources">
+    <table width="100%" class="table table-striped table-bordered table-hover table-search" id="sources-tables">
       <thead>
         <tr>
           <th>Name</th>
@@ -67,7 +67,7 @@
   </div>
   <!-- /.panel-heading -->
   <div class="panel-body">
-    <table width="100%" class="table table-striped table-bordered table-hover table-search" id="sources">
+    <table width="100%" class="table table-striped table-bordered table-hover table-search" id="sources-table">
       <thead>
         <tr>
           <th>Name</th>
@@ -127,7 +127,7 @@
   </div>
   <!-- /.panel-heading -->
   <div class="panel-body">
-    <div id="sources_nav_validity_timeline">
+    <div id="sources-nav-validity-timeline">
     </div>
   </div>
   <!-- /.panel-body -->
@@ -141,7 +141,7 @@
   </div>
   <!-- /.panel-heading -->
   <div class="panel-body">
-    <div id="sources_nav_generation_to_ingestion_timeline">
+    <div id="sources-nav-generation-to-ingestion-timeline">
     </div>
   </div>
   <!-- /.panel-body -->
@@ -155,7 +155,7 @@
   </div>
   <!-- /.panel-heading -->
   <div class="panel-body">
-    <div id="sources_nav_number_events_xy">
+    <div id="sources-nav-number-events-xy">
     </div>
   </div>
   <!-- /.panel-body -->
@@ -169,7 +169,7 @@
   </div>
   <!-- /.panel-heading -->
   <div class="panel-body">
-    <div id="sources_nav_ingestion_duration_xy">
+    <div id="sources-nav-ingestion-duration-xy">
     </div>
   </div>
   <!-- /.panel-body -->
@@ -183,7 +183,7 @@
   </div>
   <!-- /.panel-heading -->
   <div class="panel-body">
-    <div id="sources_nav_generation_time_to_ingestion_time_xy">
+    <div id="sources-nav-generation-time-to-ingestion-time-xy">
     </div>
   </div>
   <!-- /.panel-body -->
@@ -198,19 +198,19 @@
       {% include "graphs/sources_to_json.js" %}
       {% endwith %}
       {% if not show or show["validity_timeline"] %}
-      vboa.create_source_validity_timeline(sources, "sources_nav_validity_timeline");
+      vboa.create_source_validity_timeline(sources, "sources-nav-validity-timeline");
       {% endif %}
       {% if not show or show["generation_to_ingestion_timeline"] %}
-      vboa.create_source_generation_to_ingestion_timeline(sources, "sources_nav_generation_to_ingestion_timeline");
+      vboa.create_source_generation_to_ingestion_timeline(sources, "sources-nav-generation-to-ingestion-timeline");
       {% endif %}
       {% if not show or show["number_events_xy"] %}
-      vboa.create_source_number_events_xy(sources, "sources_nav_number_events_xy");
+      vboa.create_source_number_events_xy(sources, "sources-nav-number-events-xy");
       {% endif %}
       {% if not show or show["ingestion_duration_xy"] %}
-      vboa.create_source_ingestion_duration_xy(sources, "sources_nav_ingestion_duration_xy");
+      vboa.create_source_ingestion_duration_xy(sources, "sources-nav-ingestion-duration-xy");
       {% endif %}
       {% if not show or show["generation_time_to_ingestion_time_xy"] %}
-      vboa.create_source_generation_time_to_ingestion_time_xy(sources, "sources_nav_generation_time_to_ingestion_time_xy");
+      vboa.create_source_generation_time_to_ingestion_time_xy(sources, "sources-nav-generation-time-to-ingestion-time-xy");
       {% endif %}
     </script>
 {% endblock %}
