Add click_no_graphs function where applicable

--- a/src/vboa/templates/eboa_nav/query_annotations_content.html
+++ b/src/vboa/templates/eboa_nav/query_annotations_content.html
@@ -111,7 +111,7 @@
             <div id="more-ingestion-time-query-annotations">
             </div>
             <div>
-              <label id="annotations-map-button">
+              <label id="annotations-show-map">
                 <input type="checkbox" name="show_map"><span class="label-text" ><b>Show map</b></span>
               </label>
             </div>
