--- a/src/vboa/templates/eboa_nav/query_gauges_content.html
+++ b/src/vboa/templates/eboa_nav/query_gauges_content.html
@@ -46,7 +46,7 @@
               </div>
             </div>
             <div>
-              <label id="gauges-network-button">
+              <label id="gauges-show-network">
                 <input type="checkbox" name="show_network" ><span class="label-text"><b>Show network of gauges</b></span>
               </label>
             </div>
