--- a/src/vboa/templates/eboa_nav/explicit_references_nav.html
+++ b/src/vboa/templates/eboa_nav/explicit_references_nav.html
@@ -12,7 +12,7 @@
   <!-- /.panel-heading -->
   {% if ers|length > 0 %}
   <div class="panel-body">
-    <table width="100%" class="table table-striped table-bordered table-hover table-search" id="explicit-reference-nav-details-table">
+    <table width="100%" class="table table-striped table-bordered table-hover table-search" id="explicit-refs-table">
       <thead>
         <tr>
           <th>Explicit reference</th>
@@ -51,7 +51,7 @@
     </table>
   </div>
   {% else %}
-  <div id="explicit-reference-nav-no-data">
+  <div id="explicit-refs-nav-no-data">
     <br/>
     <p style="text-indent: 1em">There have been not found any "explicit reference" with the requested filters.</p>
     <br/>
