--- a/src/vboa/templates/eboa_nav/query_events_content.html
+++ b/src/vboa/templates/eboa_nav/query_events_content.html
@@ -154,6 +154,11 @@
               </label>
             </div>
             <div>
+              <label id="events-show-map">
+                <input type="checkbox" name="show_map"><span class="label-text" ><b>Show map</b></span>
+              </label>
+            </div>
+            <div>
               <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="events-submit-button">Query</button>
             </div>
           </form>
